<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:padding="23dp"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/textalert"
                android:text="@string/sure_text"
                android:layout_centerHorizontal="true"
                android:paddingTop="5dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/nobutton"
                android:background="@color/colorAccent"
                android:text="@string/no"
                android:layout_below="@+id/textalert"
                android:layout_marginTop="19dp"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/yesbutton"
                android:background="@color/colorAccent"
                android:text="@string/yes"
                android:layout_alignParentRight="true"
                android:layout_marginTop="19dp"
                android:layout_alignBottom="@+id/nobutton"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>