<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="5dp"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/cardview"

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/rowtsxt"
                android:text="@string/sayit"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/row2"
                android:layout_below="@+id/rowtsxt"
                android:text="@string/sayy"
                android:textStyle="italic"
                android:paddingTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/date"
                android:layout_below="@+id/row2"
                android:paddingTop="5dp"
                android:text="@string/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TableRow
                android:layout_alignParentRight="true"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_alignBottom="@+id/date"
                android:layout_marginTop="15dp">
                <Button
                    android:id="@+id/editwish"
                    android:layout_height="30dp"
                    android:layout_marginRight="5dp"
                    android:layout_width="30dp"
                    android:background="@android:drawable/ic_menu_edit"
                    />
                <Button
                    android:id="@+id/deletewish"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@android:drawable/ic_delete"
                    />



            </TableRow>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>